--- a/main.html
+++ b/main.html
@@ -8,7 +8,27 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <table>
+		<tr>
+		<thead>
+			<th>rollnumber</th>
+			<th>name</th>
+		</thead>
+		</tr>
+			<tr>
+		<tbody>
+			<td>1</td>
+			<td>neelam</td>
+		</tbody>
+		</tr>
+			<tr>
+		<tbody>
+			<td>2</td>
+			<td>mukesh</td>
+		</tbody>
+		</tr>
+	</table>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
