--- a/main.html
+++ b/main.html
@@ -22,11 +22,11 @@
 		</tbody>
 		</tr>
 			<tr>
-		<tbody>
+<!-- 		<tbody>
 			<td>2</td>
 			<td>mukesh</td>
 		</tbody>
-		</tr>
+		</tr> -->
 	</table>
 	<script type="text/javascript" src="./script.js">
 </script>
